<resources>
    <string name="app_name">Scooter Sharing</string>
    <string name="update_ride_button">Update Ride</string>
    <string name="update_name">The current scooter name</string>
    <string name="update_location">The current scooter location</string>
    <string name="edit_scooter_name">Enter the scooter name…</string>
    <string name="edit_scooter_location">Enter the location…</string>
    <string name="start_ride_button">Start Ride</string>
    <string name="list_rides_button">List Scooters</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="alert_title_deleteRides">Delete Ride</string>
    <string name="alert_supporting_text_deleteRides">Are you sure you want to permanently delete ride?</string>
    <string name="alert_title_startRide">Start Ride</string>
    <string name="alert_supporting_text_startRide">Are you sure you want to start ride?</string>
    <string name="alert_title_UpdateRide">Update Ride</string>
    <string name="alert_supporting_text_UpdateRide">Are you sure you want to update location?</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="map">Map</string>
    <string name="alert_title_scooterAlreadyRented">"Scooter already rented!"</string>
    <string name="alert_supporting_text_scooterAlreadyRented">"This scooter is already being rented out!"</string>
    <string name="alert_title_scooterNotFound">Scooter not found!</string>
    <string name="alert_supporting_text_scooterNotFound">A scooter by this ID was not found!</string>

    <string-array name="scooter_names">
        <item>CPH001</item>
        <item>CPH002</item>
        <item>CPH003</item>
    </string-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC-O_J8z-LEpn9oxFJYTmySMZrDeQZtwzE</string>

    <plurals name="minutes_of_ride">
        <item quantity="one"> %d minute.</item>
        <item quantity="other">%d minutes.</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_reserve">Reserve</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_location">TODO</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    <string name="time_text">Time</string>
    <string name="address_text">Address</string>
    <string name="camera_button">Stop Ride</string>
    <string name="qrscan_button">Scan QR-Code</string>
    <string name="create_ride_button">Create Ride</string>
    <string name="rented_ride_button">Current Ride</string>
    <string name="title_rented_text">Your Current Ride</string>
    <string name="end_ride_button">End Ride</string>

</resources>
